correct spacing

--- a/app/media/style.css
+++ b/app/media/style.css
@@ -75,7 +75,7 @@ TABLE.form
   color: rgb(34, 140, 34);
   marging-left: 0.75em;
   padding-left: 1.0em;
-  padding-right: 0.5em;
+  padding-right: 1.25em;
   font-size: 4em;
 }
 
